# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"                                     # helps manage buffers
thiserror = "2.0.9"                                # error handling
tokio = { version = "1.42.0", features = ["full"] }
itertools = "0.13.0"
chrono = "0.4.39"
time = "0.3.37" # async networking
clap = { version = "4.5.13", features = ["derive"] }
rand = "0.8.5"
base64 = "0.22.1"
hex = "0.4.3"
